kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: video-platform
  labels:
    name: video-platform
    istio-injection: enabled
